manually adding the code snippets generated by editor.swagger.io based on the new "last name" endpoint
