# swagger_server/controllers/default_controller.py
@@ -47,3 +47,17 @@ def get_student_by_id(student_id, subject=None):  # noqa: E501
     :rtype: Student
     """
     return student_service.get_student_by_id(student_id=student_id, subject=subject)
+
+
+# extra endpoint
+def get_student_by_last_name(last_name: str):  # noqa: E501
+    """Search student by last name
+
+     # noqa: E501
+
+    :param last_name: The last name of the student
+    :type last_name: str
+
+    :rtype: Student
+    """
+    return 'do some magic!'
