# swagger_server/swagger/swagger.yaml
@@ -6,26 +6,25 @@ info:
   title: "Swagger tutorial"
 basePath: "/service-api"
 schemes:
-- "http"
+  - "http"
 paths:
   /student:
     post:
       summary: "Add a new student"
-      description: ""
       operationId: "add_student"
       consumes:
-      - "application/json"
-      - "application/xml"
+        - "application/json"
+        - "application/xml"
       produces:
-      - "application/xml"
-      - "application/json"
+        - "application/xml"
+        - "application/json"
       parameters:
-      - in: "body"
-        name: "body"
-        description: "Student object that needs to be added"
-        required: true
-        schema:
-          $ref: "#/definitions/Student"
+        - in: "body"
+          name: "body"
+          description: "Student object that needs to be added"
+          required: true
+          schema:
+            $ref: "#/definitions/Student"
       responses:
         "200":
           description: "successful operation"
@@ -37,26 +36,47 @@ paths:
         "409":
           description: "already exists"
       x-swagger-router-controller: "swagger_server.controllers.default_controller"
+  /student/:
+    get:
+      summary: "Search student by last name"
+      operationId: "get_student_by_last_name"
+      produces:
+        - "application/xml"
+        - "application/json"
+      parameters:
+        - name: "last_name"
+          in: "query"
+          description: "The last name of the student"
+          required: true
+          type: "string"
+      responses:
+        "200":
+          description: "A matching student was found for this last name"
+          schema:
+            $ref: "#/definitions/Student"
+        "404":
+          description: "No student found matching this last name"
+      x-swagger-router-controller: "swagger_server.controllers.default_controller"
   /student/{student_id}:
     get:
       summary: "Find student by ID"
       description: "Returns a single student"
       operationId: "get_student_by_id"
       produces:
-      - "application/xml"
-      - "application/json"
+        - "application/xml"
+        - "application/json"
       parameters:
-      - name: "student_id"
-        in: "path"
-        description: "ID of student to return"
-        required: true
-        type: "integer"
-        format: "int64"
-      - name: "subject"
-        in: "query"
-        description: "The subject name"
-        required: false
-        type: "string"
+        - name: "student_id"
+          in: "path"
+          description: "ID of student to return"
+          required: true
+          type: "integer"
+          format: "int64"
+        - name: "subject"
+          in: "query"
+          description: "The subject name"
+          required: false
+          type: "string"
       responses:
         "200":
           description: "successful operation"
@@ -68,18 +88,17 @@ paths:
           description: "student not found"
       x-swagger-router-controller: "swagger_server.controllers.default_controller"
     delete:
-      description: ""
       operationId: "delete_student"
       produces:
-      - "application/xml"
-      - "application/json"
+        - "application/xml"
+        - "application/json"
       parameters:
-      - name: "student_id"
-        in: "path"
-        description: "ID of student to delete"
-        required: true
-        type: "integer"
-        format: "int64"
+        - name: "student_id"
+          in: "path"
+          description: "ID of student to delete"
+          required: true
+          type: "integer"
+          format: "int64"
       responses:
         "200":
           description: "successful operation"
